--- a/arya.html
+++ b/arya.html
@@ -3,12 +3,7 @@
 <html>
 <head>
 <title>restaurant menu</title>
-<body background-color="lavender">
-
-
-
-
-
+<body>
 <h1 align="center">KOREAN RESTAURANT</h1>
 <h2>Our Menu</h2>
 <ul>
@@ -49,4 +44,9 @@
 <a href="reserve.html"><button>Book Now</button> </a>
 </h2>
 <h3 align ="center"> Taste Jo Dil Choo Jayee &#12853 </h3>
+</ul>
+</body>
+</html>
+  
+
 
